--- a/usb/CMakeLists.txt
+++ b/usb/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
+
+message(STATUS "CMAKE_C_COMPILE_OBJECT: ${CMAKE_C_COMPILE_OBJECT}")
+message(STATUS "CMAKE_CXX_COMPILE_OBJECT: ${CMAKE_CXX_COMPILE_OBJECT}")
+
 # --------------------------
 # Toolchain setup
 # --------------------------
@@ -14,19 +18,34 @@ set(CMAKE_OBJCOPY ${TOOLCHAIN_PREFIX}-objcopy)
 set(CMAKE_OBJDUMP ${TOOLCHAIN_PREFIX}-objdump)
 set(CMAKE_SIZE ${TOOLCHAIN_PREFIX}-size)
 
-set(MY_ARCH_FLAGS "-mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb")
+
+set(MY_ARCH_FLAGS "-mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=soft -mthumb")
 set(MY_COMPILE_FLAGS "-ffunction-sections -fdata-sections -O0 -g3")
 set(MY_COMMON_FLAGS "${MY_ARCH_FLAGS} -specs=nosys.specs")
 
 set(CMAKE_C_FLAGS "${MY_COMMON_FLAGS} ${MY_COMPILE_FLAGS}")
-set(CMAKE_CXX_FLAGS "${MY_COMMON_FLAGS} ${MY_COMPILE_FLAGS} -fno-rtti -fno-exceptions")
+set(CMAKE_CXX_FLAGS "${MY_COMMON_FLAGS} ${MY_COMPILE_FLAGS}")
 set(CMAKE_ASM_FLAGS "${MY_COMMON_FLAGS} -x assembler-with-cpp")
 set(CMAKE_EXE_LINKER_FLAGS "${MY_COMMON_ARGS} -Wl,-T,${CMAKE_CURRENT_SOURCE_DIR}/STM32F446RETX_FLASH.ld -Wl,--gc-sections")
+
+
+enable_language(C CXX ASM)
+
+# --------------------------
+# Subdirectories
+# --------------------------
+
+
+set(syoch-robotics-disable-features ON)
+set(syoch-robotics-disable-thread ON)
+add_subdirectory(syoch-robotics)
+
+add_subdirectory(nhk2023-b)
 
 # --------------------------
 # App
 # --------------------------
-project(app C ASM)
+project(app)
 
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
   "Core/*.c"
@@ -56,6 +75,9 @@ target_compile_definitions(app PRIVATE
   -DDEBUG
   -DUSE_HAL_DRIVER
   -DSTM32F446xx
+)
+target_link_libraries(app PRIVATE
+srobo_base_hxx im920_rs_hxx NHK2024BRsLib NHK2024BRuntime
 )
 
 add_custom_target(app.hex DEPENDS app COMMAND ${CMAKE_OBJCOPY} -O ihex app app.hex)
