--- a/usb/Makefile
+++ b/usb/Makefile
@@ -13,6 +13,7 @@ write: build/app.hex
 	st-flash \
 		--connect-under-reset \
 		--format ihex \
+		--serial 0672FF575251717867212233 \
 		write $<
 
 
