--- a/usb/Makefile
+++ b/usb/Makefile
@@ -9,19 +9,11 @@ build/app.hex: build/build.ninja
 	ninja -C build -j 12 app.hex
 
 .PHONY: write
-write1: build/app.hex
+write: build/app.hex
 	st-flash \
 		--connect-under-reset \
 		--format ihex \
 		--serial 0672FF575251717867212233 \
-		write $<
-
-.PHONY: write
-write2: build/app.hex
-	st-flash \
-		--connect-under-reset \
-		--format ihex \
-		--serial 066FFF555054877567044942 \
 		write $<
 
 
