Update: Updated serial

--- a/robot-collect/Makefile
+++ b/robot-collect/Makefile
@@ -10,7 +10,7 @@ $(BUILD)/build.ninja: CMakeLists.txt src/CMakeLists.txt
 
 .PHONY: write
 write: build
-	st-flash --connect-under-reset --format ihex write $(BUILD)/src/app/app.hex
+	st-flash --connect-under-reset --format ihex --serial 066FFF555054877567044942 write $(BUILD)/src/app/app.hex
 
 .PHONY: clean
 clean:
