--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "robot-bridge": true,
     "robot-collect": true,
     "robot1-main": true,
+    "usb": true,
   },
   "editor.inlayHints.enabled": "on",
 }
