--- a/robot-bridge/src/app/CMakeLists.txt
+++ b/robot-bridge/src/app/CMakeLists.txt
@@ -4,9 +4,17 @@ target_sources(app PRIVATE
 )
 
 target_link_libraries(app PRIVATE
-  mbed-os NHK2024B PS4_RX
-  syoch-robotics ikarashiCAN_mk2 MotorController
-  IkakoRobomas ikako_rohm_md can_servo
+  mbed-os
+  static-mbed-os
+  NHK2024B
+  PS4_RX
+  ikarashiCAN_mk2
+  fep
+  syoch-robotics-simple-can
+  syoch-robotics-mbed-uart
+  syoch-robotics-ikako-robomas
+  ikako_rohm_md
+  can_servo
 )
 
 mbed_set_post_build(app)
