--- a/robot1-main/src/CMakeLists.txt
+++ b/robot1-main/src/CMakeLists.txt
@@ -4,8 +4,19 @@ target_sources(app PRIVATE
 )
 
 target_link_libraries(app PRIVATE
-  mbed-os NHK2024B PS4_RX
-  syoch-robotics ikarashiCAN_mk2 ikakoMDC
+  mbed-os
+  static-mbed-os
+  NHK2024B
+  PS4_RX
+  ikarashiCAN_mk2
+  fep
+  syoch-robotics-common
+  syoch-robotics-logger
+  syoch-robotics-thread
+  syoch-robotics-ikako-mdc
+  syoch-robotics-mbed-uart
+  syoch-robotics-simple-can
+  syoch-robotics-gpio
 )
 
 mbed_set_post_build(app)
