--- a/robot-collect/CMakeLists.txt
+++ b/robot-collect/CMakeLists.txt
@@ -1,141 +1,13 @@
 cmake_minimum_required(VERSION 3.19)
 cmake_policy(VERSION 3.19)
 
-set(MBED_APP_JSON_PATH mbed_app.json)
-
+set(MBED_APP_JSON_PATH ${CMAKE_SOURCE_DIR}/mbed_app.json)
 include(mbed-os/tools/cmake/app.cmake)
 add_subdirectory(mbed-os)
 
-add_subdirectory(syoch-robotics)
-add_subdirectory(nhk2023-b)
-
-#
-# MotorController
-#
-add_library(MotorController STATIC)
-target_include_directories(MotorController PUBLIC
-  ./MotorController
-)
-target_include_directories(MotorController PRIVATE
-  ./MotorController/Ikako_PID
-  ./MotorController/DisturbanceObserver
-  ./MotorController/DisturbanceObserver/LowPassFilter/LowPassFilter.cpp
-)
-target_sources(MotorController PRIVATE
-  ./MotorController/MotorController.cpp
-  ./MotorController/Ikako_PID/ikako_PID.cpp
-  ./MotorController/DisturbanceObserver/DOB.cpp
-  ./MotorController/DisturbanceObserver/LowPassFilter/LowPassFilter.cpp
-)
-target_link_libraries(MotorController PRIVATE
-  mbed-os ikarashiCAN_mk2
-)
-
-#
-# IkakoRobomas
-#
-add_library(IkakoRobomas STATIC)
-target_include_directories(IkakoRobomas PUBLIC
-  ./IkakoRobomas
-)
-target_sources(IkakoRobomas PRIVATE
-  ./IkakoRobomas/ikako_m2006.cpp
-  ./IkakoRobomas/ikako_m3508.cpp
-  ./IkakoRobomas/ikako_robomas.cpp
-)
-target_link_libraries(IkakoRobomas PRIVATE
-  mbed-os ikarashiCAN_mk2 MotorController
-)
-
-#
-# ikako_c620
-#
-add_library(ikako_c620 STATIC)
-target_include_directories(ikako_c620 PUBLIC
-  ./ikako_c620
-)
-target_sources(ikako_c620 PRIVATE
-  ikako_c620/ikako_c620.cpp
-)
-target_link_libraries(ikako_c620 PRIVATE
-  mbed-os ikarashiCAN_mk2
-)
-
-#
-# Futaba_Puropo
-#
-add_library(Futaba_Puropo STATIC)
-target_include_directories(Futaba_Puropo PUBLIC
-  ./Futaba_Puropo
-)
-target_sources(Futaba_Puropo PRIVATE
-  Futaba_Puropo/puropo.cpp
-)
-target_link_libraries(Futaba_Puropo PRIVATE
-  mbed-os
-)
-
-#
-# bno055
-#
-add_library(bno055 STATIC)
-target_include_directories(bno055 PUBLIC
-  ./bno055
-)
-target_sources(bno055 PRIVATE
-  bno055/bno055.cpp
-)
-target_link_libraries(bno055 PRIVATE
-  mbed-os
-)
-
-#
-# ikarashiCAN_mk2
-#
-add_library(ikarashiCAN_mk2 STATIC)
-target_include_directories(ikarashiCAN_mk2 PUBLIC
-  ./ikarashiCAN_mk2
-  ./ikarashiCAN_mk2/NoMutexCAN-master
-)
-target_sources(ikarashiCAN_mk2 PRIVATE
-  ikarashiCAN_mk2/ikarashiCAN_mk2.cpp
-)
-target_link_libraries(ikarashiCAN_mk2 PRIVATE
-  mbed-os
-)
-
-#
-# ikakoMDC
-#
-add_library(ikakoMDC STATIC)
-target_include_directories(ikakoMDC PUBLIC
-  ./ikakoMDC
-  ./ikakoMDC/lpf
-  ./ikakoMDC/PID
-)
-target_sources(ikakoMDC PRIVATE
-  ikakoMDC/ikakoMDC.cpp
-  ikakoMDC/lpf/lpf.cpp
-  ikakoMDC/PID/PID.cpp
-)
-target_link_libraries(ikakoMDC PRIVATE
-  mbed-os
-  ikarashiCAN_mk2
-)
-
-#
-# PS4_RX
-#
-add_library(PS4_RX STATIC)
-target_include_directories(PS4_RX PUBLIC
-  ./PS4_RX
-)
-target_sources(PS4_RX PRIVATE
-  PS4_RX/PS4.cpp
-)
-target_link_libraries(PS4_RX PRIVATE
-  mbed-os
-)
+set(SYOCH_ROBOTICS_TARGET "Mbed" CACHE STRING "Thread implementation")
+add_subdirectory(../common_libs common_lib)
+include(../common_libs/static-mbed-os/library.cmake)
 
 project(ControllerSTM32)
 
