--- a/robot-collect/src/app/CMakeLists.txt
+++ b/robot-collect/src/app/CMakeLists.txt
@@ -4,8 +4,16 @@ target_sources(app PRIVATE
 )
 
 target_link_libraries(app PRIVATE
-  mbed-os syoch-robotics ikarashiCAN_mk2 MotorController IkakoRobomas ikarashiCAN_mk2 PS4_RX
-  NHK2024B Futaba_Puropo
+  mbed-os
+  syoch-robotics-logger
+  syoch-robotics-mbed-uart
+  syoch-robotics-gpio
+  fep
+  bd621x
+  ikarashiCAN_mk2
+  PS4_RX
+  NHK2024B
+  Futaba_Puropo
 )
 
 mbed_set_post_build(app)
