Update: Changed Findxxx's searching library method to fetchcontent

--- a/common_libs/nhk2023-b/CMakeLists.txt
+++ b/common_libs/nhk2023-b/CMakeLists.txt
@@ -33,9 +33,9 @@ target_link_libraries(NHK2024BRuntime PUBLIC
   ssp
 )
 
-add_library(NHK2024B STATIC
+find_package(PS4_RX REQUIRED)
 
-)
+add_library(NHK2024B STATIC)
 target_link_libraries(NHK2024B PUBLIC
   static-mbed-os
   srobo_base_hxx
