--- a/robot-collect/src/app/CMakeLists.txt
+++ b/robot-collect/src/app/CMakeLists.txt
@@ -3,6 +3,10 @@ target_sources(app PRIVATE
   main.cpp
 )
 
+find_package(ikarashiCAN_mk2 REQUIRED)
+find_package(PS4_RX REQUIRED)
+find_package(Futaba_Puropo REQUIRED)
+
 target_link_libraries(app PRIVATE
   mbed-os
   syoch-robotics-logger
