--- a/common_libs/static-mbed-os/CMakeLists.txt
+++ b/common_libs/static-mbed-os/CMakeLists.txt
@@ -1,43 +1,83 @@
 cmake_minimum_required(VERSION 3.19)
 cmake_policy(VERSION 3.19)
 
+# set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /workspaces/nhk-2024-b/common_libs)
+set(CMAKE_INSTALL_MESSAGE LAZY)
 set(MBED_APP_JSON_PATH mbed_app.json)
+set(MBED_TOOLCHAIN GCC_ARM)
 
 include(mbed-os/tools/cmake/app.cmake)
 add_subdirectory(mbed-os)
 
 project(static-mbed-os)
 
-add_library(static-mbed-os-${MBED_TARGET} STATIC source/mbed-os.cpp)
-target_link_libraries(static-mbed-os-${MBED_TARGET} PRIVATE
+# ----- Target
+
+add_library(static-mbed-os-${MBED_TARGET} STATIC
+  source/mbed-os.cpp
+)
+target_link_libraries(static-mbed-os-${MBED_TARGET} PUBLIC
   mbed-os
 )
-
-install(TARGETS static-mbed-os-${MBED_TARGET}
-  EXPORT static-mbed-os-${MBED_TARGET}-export
-  ARCHIVE DESTINATION lib
-  INCLUDES DESTINATION include
-  PUBLIC_HEADER DESTINATION include
+install(
+  TARGETS static-mbed-os-${MBED_TARGET}
+  ARCHIVE DESTINATION mbed-os@3297bae/lib
 )
 
+# ---- Install Headers
 
-# -----
+get_target_property(MBED_OS_INCLUDE1 mbed-os         INTERFACE_INCLUDE_DIRECTORIES)
+get_target_property(MBED_OS_INCLUDE3 mbed-core-flags INTERFACE_INCLUDE_DIRECTORIES)
 
-get_target_property(MBED_OS_INCLUDE_INTERNAL mbed-os INTERFACE_INCLUDE_DIRECTORIES)
-message(STATUS "MBED_OS_INCLUDE_INTERNAL: ${MBED_OS_INCLUDE_INTERNAL}")
+set(MBED_OS_INCLUDES
+  ${MBED_OS_INCLUDE1}
+  ${MBED_OS_INCLUDE3}
+)
+list(REMOVE_DUPLICATES MBED_OS_INCLUDES)
 
-foreach(dir ${MBED_OS_INCLUDE_INTERNAL})
+foreach(dir ${MBED_OS_INCLUDES})
   if(NOT EXISTS ${dir})
-    list(REMOVE_ITEM MBED_OS_INCLUDE_INTERNAL ${dir})
+    list(REMOVE_ITEM MBED_OS_INCLUDES ${dir})
+    message(WARNING "Directory not found: ${dir}")
   endif()
 endforeach()
-file(WRITE ${CMAKE_BINARY_DIR}/mbed-os-include-internal.txt "${MBED_OS_INCLUDE_INTERNAL}")
 
-# -----
+list(JOIN MBED_OS_INCLUDES "\n" MBED_OS_INCLUDES)
+file(WRITE ${CMAKE_BINARY_DIR}/includes.txt "${MBED_OS_INCLUDES}")
+
+install(
+  FILES ${CMAKE_BINARY_DIR}/includes.txt
+  DESTINATION share/cmake/mbed-os@3297bae
+)
+
+# ----- Definitions
 
 get_target_property(MBED_OS_DEFINITIONS mbed-os INTERFACE_COMPILE_DEFINITIONS)
-get_target_property(MBED_OS_DEFINITIONS_2 mbed-os DEFINITIONS)
 
-file(WRITE ${CMAKE_BINARY_DIR}/mbed-os-definitions.txt "${MBED_OS_DEFINITIONS} ${MBED_OS_DEFINITIONS_2} __MBED__")
+list(INSERT MBED_OS_DEFINITIONS 0 "__MBED__=1")
+list(JOIN MBED_OS_DEFINITIONS " " MBED_OS_DEFINITIONS)
 
-mbed_finalize_build()
+file(WRITE ${CMAKE_BINARY_DIR}/definitions.txt "${MBED_OS_DEFINITIONS}")
+install(
+  FILES ${CMAKE_BINARY_DIR}/definitions.txt
+  DESTINATION share/cmake/mbed-os@3297bae
+)
+
+# ----- Definitions
+
+get_target_property(MBED_OS_LINKER_PATH mbed-os LINKER_SCRIPT_PATH)
+install(
+  FILES ${MBED_OS_LINKER_PATH}
+  DESTINATION share/cmake/mbed-os@3297bae
+  RENAME linker_script.ld
+)
+
+# ----- Find Package
+install(
+  FILES cmake/FindStaticMbedOS.cmake
+  DESTINATION share/cmake
+)
+install(
+  FILES cmake/UseStaticMbedOS.cmake
+  DESTINATION share/cmake
+)
