--- a/robot-bridge/src/CMakeLists.txt
+++ b/robot-bridge/src/CMakeLists.txt
@@ -1,1 +1,21 @@
-add_subdirectory(app)
+find_package(PS4_RX REQUIRED)
+find_package(ikarashiCAN_mk2 REQUIRED)
+find_package(can_servo REQUIRED)
+find_package(ikako_rohm_md REQUIRED)
+
+add_executable(robot2 main.cpp)
+
+target_link_libraries(robot2 PRIVATE
+  mbed-os
+  NHK2024B
+  PS4_RX
+  ikarashiCAN_mk2
+  fep
+  syoch-robotics-simple-can
+  syoch-robotics-mbed-uart
+  syoch-robotics-ikako-robomas
+  ikako_rohm_md
+  can_servo
+)
+
+mbed_set_post_build(robot2)
