--- a/robot-bridge/src/CMakeLists.txt
+++ b/robot-bridge/src/CMakeLists.txt
@@ -2,11 +2,12 @@ find_package(PS4_RX REQUIRED)
 find_package(ikarashiCAN_mk2 REQUIRED)
 find_package(can_servo REQUIRED)
 find_package(ikako_rohm_md REQUIRED)
+find_package(StaticMbedOS REQUIRED)
 
 add_executable(robot2 main.cpp)
 
 target_link_libraries(robot2 PRIVATE
-  mbed-os
+  StaticMbedOS
   NHK2024B
   PS4_RX
   ikarashiCAN_mk2
@@ -18,4 +19,4 @@ target_link_libraries(robot2 PRIVATE
   can_servo
 )
 
-mbed_set_post_build(robot2)
+static_mbed_os_app_target(robot2)
