Update: Arrangement projects

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 .venv
 .fep
-*/BUILD
-*/build
-build/CMakeCache.txt
-build/.cmake/api/v1/query/client-vscode/query.json
-build/CMakeFiles/cmake.check_cache
+Build
