--- a/robot1-main/CMakeLists.txt
+++ b/robot1-main/CMakeLists.txt
@@ -1,17 +1,24 @@
-cmake_minimum_required(VERSION 3.19)
-cmake_policy(VERSION 3.19)
+find_package(PS4_RX REQUIRED)
+find_package(ikarashiCAN_mk2 REQUIRED)
 
-set(MBED_APP_JSON_PATH ${CMAKE_SOURCE_DIR}/mbed_app.json)
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
-  /workspaces/nhk-2024-b/common_libs
-  /workspaces/nhk-2024-b/common_libs/syoch-robotics/libs/cmake
-  /usr/arm-none-eabi/local/share/cmake
+add_executable(robot1)
+target_sources(robot1 PRIVATE
+  main.cpp
 )
 
-include(UseStaticMbedOS)
-project(NHK)
+target_link_libraries(robot1 PRIVATE
+  StaticMbedOS
+  NHK2024B
+  PS4_RX
+  ikarashiCAN_mk2
+  fep
+  syoch-robotics-common
+  syoch-robotics-logger
+  syoch-robotics-thread
+  syoch-robotics-ikako-mdc
+  syoch-robotics-mbed-uart
+  syoch-robotics-simple-can
+  syoch-robotics-gpio
+)
 
-set(SYOCH_ROBOTICS_TARGET "Mbed" CACHE STRING "Thread implementation")
-add_subdirectory(../common_libs common_lib)
-
-add_subdirectory(src)
+static_mbed_os_app_target(robot1)
