--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.19)
 cmake_policy(VERSION 3.19)
 
+set(CMAKE_CXX_STANDARD 23 CACHE STRING "C++ standard")
 set(MBED_APP_JSON_PATH ${CMAKE_SOURCE_DIR}/mbed_app.json)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
   /workspaces/nhk-2024-b/common_libs
