--- a/connection-test/CMakeLists.txt
+++ b/connection-test/CMakeLists.txt
@@ -4,6 +4,8 @@ find_package(IkakoRobomas REQUIRED)
 find_package(can_servo REQUIRED)
 
 add_executable(connection-test)
+target_compile_features(connection-test PUBLIC cxx_std_20)
+
 target_sources(connection-test PRIVATE
   main.cpp
 )
@@ -23,6 +25,7 @@ target_link_libraries(connection-test PRIVATE
   MotorController
   IkakoRobomas
   can_servo
+  rd16
 )
 
 static_mbed_os_app_target(connection-test)
