--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,11 @@
   },
   "editor.inlayHints.enabled": "on",
   "sonarlint.pathToCompileCommands": "${workspaceFolder}/robot3-collect-esp32/build/compile_commands.json",
+  "saveAndRun": {
+    "commands": [
+      {
+        "cmd": "clear; bash scripts/on_save.sh ${file}",
+      }
+    ]
+  }
 }
