Update: Added Context#AddTask for shortcut

--- a/framework-test/Makefile
+++ b/framework-test/Makefile
@@ -15,3 +15,7 @@ run_t: build
 .PHONY: run
 run: build
 	Build/framework-test
+
+.PHONY: watch-threads
+watch-threads:
+	watch -n 1 -t ps H -C framework-test -o \"pid tid cmd comm\"
