Update: moved the framework to robobus

--- a/common_libs/CMakeLists.txt
+++ b/common_libs/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /workspaces/nhk-2024-b/common_libs /usr/arm-none-eabi/local/share/cmake)
 
+add_subdirectory(robobus)
 add_subdirectory(nhk2023-b)
 add_subdirectory(syoch-robotics/libs)
