--- a/connection-test/CMakeLists.txt
+++ b/connection-test/CMakeLists.txt
@@ -1,9 +1,4 @@
-FetchContent_Declare(
-  fmt
-  GIT_REPOSITORY https://github.com/fmtlib/fmt
-  GIT_TAG        e69e5f977d458f2650bb346dadf2ad30c5320281) # 10.2.1
-FetchContent_MakeAvailable(fmt)
-
+find_package(fmt REQUIRED)
 find_package(ikarashiCAN_mk2 REQUIRED)
 find_package(MotorController REQUIRED)
 find_package(IkakoRobomas REQUIRED)
