--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,11 @@
   },
   "editor.inlayHints.enabled": "on",
   "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/compile_commands.json",
+  "cmake.preferredGenerators": [
+    "Ninja",
+    "Unix Makefiles",
+    "Ninja Multi-Config"
+  ],
   "cmake.configureArgs": [
     "-DCMAKE_BUILD_TYPE=Debug",
     "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
