--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,21 @@ cmake_policy(VERSION 3.19)
 add_compile_options(-fdiagnostics-color=always)
 
 set(CMAKE_CXX_STANDARD 20 CACHE STRING "C++ standard")
-set(MBED_APP_JSON_PATH ${CMAKE_SOURCE_DIR}/mbed_app.json)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
   /workspaces/nhk-2024-b/common_libs
   /workspaces/nhk-2024-b/common_libs/syoch-robotics/libs/cmake
-  /usr/arm-none-eabi/local/share/cmake
 )
 
-include(UseStaticMbedOS)
-project(NHK)
-
+set(STM32CUBE_TARGET NUCLEO_F446RE)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(MBED_APP_JSON_PATH ${CMAKE_SOURCE_DIR}/mbed_app.json)
 set(SYOCH_ROBOTICS_TARGET "Mbed" CACHE STRING "Thread implementation")
+set(EMULATION_ENABLED OFF CACHE STRING "Enable emulation")
+set(MBED_TARGET "NUCLEO_F446RE" CACHE STRING "Mbed target")
+
+include(/usr/arm-none-eabi/share/cmake/StaticMbedOSToolchain-NUCLEO_F446RE.cmake)
+
+project(NHK)
 add_subdirectory(common_libs)
 
 add_subdirectory(connection-test)
