--- a/src/robot3-collect/CMakeLists.txt
+++ b/src/robot3-collect/CMakeLists.txt
@@ -1,13 +1,10 @@
-add_executable(robot3)
-target_sources(robot3 PRIVATE
-  main.cpp
-)
+add_executable(robot3 main.cpp)
 
 find_package(ikarashiCAN_mk2 REQUIRED)
 find_package(PS4_RX REQUIRED)
 find_package(Futaba_Puropo REQUIRED)
 
-target_link_libraries(robot3 PRIVATE
+target_link_libraries(robot3 PUBLIC
   StaticMbedOS
   syoch-robotics-logger
   syoch-robotics-mbed-uart
